--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,7 +20,7 @@ a {
   text-decoration: none;
   text-shadow: 1px 1px 1px black;
   font-size: 1.5em;
-  background: rgba(193, 235, 187, .9);
+  background:white;
 }
 
 a:hover {
